--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.6.1",
     "gsap": "^3.12.7",
