--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "motion": "^12.7.2",
     "next": "15.3.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-simple-typewriter": "^5.0.1",
     "react-snowfall": "^2.2.0"
