--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.7.2",
     "next": "15.3.0",
     "react": "^18.3.1",
+    "react-axios": "^2.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
