--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-axios": "^2.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
