--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "filepond": "^4.32.7",
+    "filepond-plugin-image-preview": "^4.6.12",
     "gsap": "^3.12.7",
     "motion": "^12.7.2",
     "next": "15.3.0",
@@ -21,6 +23,7 @@
     "react-axios": "^2.0.6",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-filepond": "^7.1.3",
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
