--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.9.0",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "gsap": "^3.12.7",
