--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "gsap": "^3.12.7",
+    "jwt-decode": "^4.0.0",
     "motion": "^12.7.2",
     "next": "15.3.0",
     "react": "^18.3.1",
