--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/material": "^7.0.2",
     "@radix-ui/themes": "^3.2.1",
     "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^0.27.2",
+    "axios": "^1.9.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "draftjs-to-markdown": "^0.6.0",
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "gsap": "^3.12.7",
@@ -24,6 +27,7 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-filepond": "^7.1.3",
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
@@ -35,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
