--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "filepond": "^4.32.7",
     "filepond-plugin-image-preview": "^4.6.12",
     "gsap": "^3.12.7",
+    "jodit-react": "^5.2.19",
     "jwt-decode": "^4.0.0",
     "motion": "^12.7.2",
     "next": "15.3.0",
@@ -40,9 +41,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.5.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
     "tailwindcss": "^4",
