--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-simple-typewriter": "^5.0.1",
     "react-snowfall": "^2.2.0"
