--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "my-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,42 +11,41 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.1.2",
+    "@tailwindcss/postcss": "^4.1.10",
+    "gsap": "^3.13.0",
+    "next": "14.2.30",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
+  },
+  "devDependencies": {
     "@radix-ui/themes": "^3.2.1",
-    "@reduxjs/toolkit": "^2.6.1",
-    "axios": "^1.9.0",
-    "filepond": "^4.32.7",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/draftjs-to-html": "^0.8.4",
+    "@types/html-to-draftjs": "^1.5.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
+    "axios": "^1.10.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.30",
+    "filepond": "^4.32.8",
     "filepond-plugin-image-preview": "^4.6.12",
-    "gsap": "^3.12.7",
     "jodit-react": "^5.2.19",
     "jwt-decode": "^4.0.0",
-    "motion": "^12.7.2",
-    "next": "15.3.0",
-    "react": "^18.3.1",
+    "motion": "^12.18.1",
+    "postcss": "^8.5.6",
     "react-countup": "^6.5.3",
-    "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-filepond": "^7.1.3",
     "react-google-charts": "^5.2.1",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-snowfall": "^2.2.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/draftjs-to-html": "^0.8.4",
-    "@types/html-to-draftjs": "^1.5.0",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/react-draft-wysiwyg": "^1.13.8",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
